--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -83,6 +83,7 @@ intro=Here you can change your language and privacy settings:
 language=Language
 friendsseefriends=Friends can see your friends
 allowfriendrequests=Allow unverified friend requests
+showlogwindow=Show log messages
 
 [button]
 back=Back
