Beginnings of message composition

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -99,6 +99,12 @@ sender.unknown=Absender unbekannt
 recpt.unknown=<unbekannt>
 confirm.messagesent=Nachricht geschickt.
 
+[composemessage]
+title=Neue Nachricht
+to=An
+to.helptext=Antippen um die Empfänger auszuwählen
+messagegoeshere=Hier die Nachricht
+
 [calendar]
 title=Kalender
 
