--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -135,6 +135,8 @@ underline=Underline
 accept=Accept
 reject=Reject
 delete=Delete
+addall=+ All
+removeall=- All
 
 [gui]
 dialogtitle.error=Error
