--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -86,6 +86,8 @@ error.fingerprintcheckfailed=Those aren't the codewords expected from that key. 
 [messages]
 title=Messages
 createnew=Create new message
+search=Search messages
+searchfor=Search for
 contactrequests=Contact Requests
 prompt.contactaccept=Message to accept request from '%s'
 prompt.contactreject=Reject request from '%s'
@@ -141,6 +143,7 @@ reject=Reject
 delete=Delete
 addall=+ All
 removeall=- All
+search=Search
 
 [gui]
 dialogtitle.error=Error
