Extending the simple database

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -149,3 +149,6 @@ search=Suchen
 dialogtitle.error=Fehler
 dialogtitle.openimage=Bilddatei Öffnen
 fileselection.filetypes.jpg=Bilddateien (*.jpg)
+
+[warning]
+keysnotfoundfor=Schlüsselbund hat keine Schlüssel für:
