Tweak db interface, tokens for startup wizard

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -10,7 +10,6 @@ dependencies.heading=Abhängigkeiten
 dependencies.intro=Murmeli braucht folgende Programmen und Bibliotheken um zu laufen
 dependencies.pyqt=PyQt (und Qt), für Dialoge und Darstellung
 dependencies.gnupg=Python-GnuPG (und GPG) für Ver- und Entschlüsselung
-dependencies.pymongo=Pymongo (und MongoDB) für das Speichern alle Nachrichten
 dependencies.allfound=Das sieht gut aus, jetzt weiter!
 dependencies.notallfound=Murmeli kann nicht ohne diese laufen.  Bitte nochmals prüfen und ggf. installieren.
 dependencies.alsotor=Murmeli braucht auch Tor zu kommunizieren, dies wird später geprüft.
@@ -19,14 +18,13 @@ dep.notfound=Fehlt
 paths.heading=Dateipfade
 paths.configfile=Konfigurationsdatei
 paths.datadir=Data Verzeichnis,<br>wo alle Nachrichten gespeichert werden
-paths.mongoexe=Pfad zum Mongo
 paths.torexe=Pfad zum Tor
 paths.gpgexe=Pfad zum Gpg
 paths.considerencryption=Es könnte sich lohnen, das Data Verzeichnis innerhalb einen<br>verschlüsselten Volume zu platzieren, falls vorhanden.
 paths.failedtocreatedatadir=Der Versuch, die Verzeichnisse zu kreieren, ist fehlgeschlagen.<br>Bitte einen anderen Pfad auswählen.
 services.heading=Dienstleistungen
 services.intro=Murmeli braucht folgende Dienstleistungen initialisiert und gestartet zu sein
-services.mongo=Mongo, für die Datenbank
+services.database=Die lokalen Datenbank
 services.gpg=GPG, für die Keyringverwaltung
 services.tor=Tor, für die Routing von Nachrichten
 services.abouttostart=Diese Dienstleistungen werden jetzt gestartet...
