--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -7,26 +7,24 @@ intro.description1=With Murmeli, everything you send and receive is encrypted, s
 intro.description2=There is no central server, everything runs on the computers which you control.  It's email, it's blogging, it's photo sharing, it's social.
 intro.description3=There are just a few steps needed to setup your system, and then you can begin connecting to your friends.
 dependencies.heading=Dependencies
-dependencies.intro=Murmeli needs all these additional programs in order to run
+dependencies.intro=Murmeli needs these additional programs in order to run
 dependencies.pyqt=PyQt (and Qt), for all dialogs and controls
 dependencies.gnupg=Python-GnuPG (and GPG) for encryption
-dependencies.pymongo=Pymongo (and MongoDB) for storing messages
 dependencies.allfound=That looks good, now onto the next step!
-dependencies.notallfound=Murmeli can't run without all these programs. Please check them again.
+dependencies.notallfound=Murmeli can't run without these programs. Please check them again.
 dependencies.alsotor=Murmeli also requires tor to be installed, this will be checked shortly.
 dep.found=Found
 dep.notfound=Missing
 paths.heading=File paths
 paths.configfile=Settings file
 paths.datadir=Data directory,<br>where all messages will be stored
-paths.mongoexe=Path to mongo executable
 paths.torexe=Path to tor executable
 paths.gpgexe=Path to gpg executable
 paths.considerencryption=Consider putting your data directory inside an encrypted volume, if you have one.
 paths.failedtocreatedatadir=Failed to create the data directories.<br>Please choose another path.
 services.heading=Services
 services.intro=Murmeli needs the following services to be initialised and started
-services.mongo=Mongo, for the database
+services.database=The local database
 services.gpg=GPG, for the keyring management
 services.tor=Tor, for the message routing
 services.abouttostart=Each of these services will now be started...
