Display messages using indented message trees

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -139,6 +139,7 @@ underline=Unterstrichen
 accept=Verbinden
 reject=Ablehnen
 delete=Löschen
+reply=Beantworten
 addall=+ Alle
 removeall=- Alle
 search=Suchen
