--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -51,6 +51,9 @@ toolbar.messages=Messages
 toolbar.calendar=Calendar
 toolbar.settings=Settings
 
+[home]
+title=Murmeli
+
 [contacts]
 title=Contacts
 online=online
