extend setup tool to define robot parameters, briefly start tor

--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -18,6 +18,9 @@ createdatadir=Create data directory?
 createdir.create=Create
 createddir.cancel=Cancel
 datadir.creating=Creating data directory.
+entertorpath=Full path to tor exe (or 'tor')
+startingtorfailed=Failed to start tor.  Check the exe path.
+foundtorid=Your Murmeli id is '%s'
 genkeypair=To use Murmeli, you need to generate a new keypair.  This will take some time.
 genkeypair.rsa=Generate RSA keypair
 genkeypair.name=Name (required)
@@ -25,6 +28,16 @@ genkeypair.email=Email (optional)
 genkeypair.comment=Comment (optional)
 genkeypair.pleasewait=Please wait while the keypair is generated...
 genkeypair.complete=Keypair generated.
+selectprivatekey=This keyring has more than one key already.  Which one should Murmeli use?
+realorrobot=Would you like to setup a normal system, or a robot relay?
+system.real=Normal system
+system.robot=Robot system, just for your personal relay
+selectrobotownerkey=Select the key of the robot's owner, either from the keyring\nor from a .key file in the data directory
+refreshkeylist=Refresh list
+exportpublickey=Export the public key to a file (for setting up a robot)
+publickeyexported=To setup a robot, copy the key file '%s' to the robot's data directory.
+yes=Yes
+no=No
 
 [startupwizard]
 title=Murmeli Startup Wizard
