--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -16,6 +16,9 @@ createdatadir=Datenordner kreieren?
 createdir.create=Kreieren
 createddir.cancel=Abbrechen
 datadir.creating=Ordner kreiert.
+entertorpath=Pfad zum Tor exe (manchmal nur 'tor')
+startingtorfailed=Starten von Tor ist fehlgeschlagen.  Pfad überprüfen.
+foundtorid=Die neue Murmeli-Id lautet '%s'
 genkeypair=Ein neues Schlüsselpaar muss jetzt generiert werden.  Das dauert ja ein bisschen.
 genkeypair.rsa=RSA Schlüsselpaar generieren
 genkeypair.name=Name (benötigt)
@@ -23,6 +26,16 @@ genkeypair.email=Email (optional)
 genkeypair.comment=Bemerkung (optional)
 genkeypair.pleasewait=Bitte Geduld haben während der Generierung...
 genkeypair.complete=Schlüsselpaar generiert.
+selectprivatekey=Dieser Schlüsselbund hat mehrere Schlüssel.  Welcher sollte für Murmeli verwendet werden?
+realorrobot=Sollte dieses System ein normales sein, oder einen Robotersystem für Weiterleitung?
+system.real=Normales System
+system.robot=Robotersystem für das Weiterleiten der Nachrichten
+selectrobotownerkey=Den Schlüssel des Owners auswählen, entweder vom Schlüsselbund\noder von einer .key Datei im Datenverzeichnis
+refreshkeylist=Liste aktualisieren
+exportpublickey=Den öffentlichen Schlüssel zur Datei exportieren (für das Aufsetzten eines Robotersystems)
+publickeyexported=Um ein Roboter aufzusetzen, die Schlüsseldatei '%s' ins Datenverzeichnis des Roboters kopieren.
+yes=Ja
+no=Nein
 
 [startupwizard]
 title=Murmeli Startup Wizard
