--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -54,10 +54,10 @@ dep.found=Gefunden
 dep.notfound=Fehlt
 paths.heading=Dateipfade
 paths.configfile=Konfigurationsdatei
-paths.datadir=Data Verzeichnis,<br>wo alle Nachrichten gespeichert werden
+paths.datadir=Datenverzeichnis,<br>wo alle Nachrichten gespeichert werden
 paths.torexe=Pfad zum Tor
 paths.gpgexe=Pfad zum Gpg
-paths.considerencryption=Es könnte sich lohnen, das Data Verzeichnis innerhalb einen<br>verschlüsselten Volume zu platzieren, falls vorhanden.
+paths.considerencryption=Es könnte sich lohnen, das Datenverzeichnis innerhalb einen<br>verschlüsselten Volume zu platzieren, falls vorhanden.
 paths.failedtocreatedatadir=Der Versuch, die Verzeichnisse zu kreieren, ist fehlgeschlagen.<br>Bitte einen anderen Pfad auswählen.
 services.heading=Dienstleistungen
 services.intro=Murmeli braucht folgende Dienstleistungen initialisiert und gestartet zu sein
