Murmeli ids are longer now so display in editbox instead of label

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -78,7 +78,7 @@ keygen.mighttakeawhile=Die Schlüsselgenerierung könnte ein paar Minuten in Ans
 finished.heading=Aufsetzen abgeschlossen
 finished.congrats=Glückwunsch, Murmeli ist jetzt startbereit.
 finished.nowstart=Jetzt kannst du Murmeli starten und beginnen, Freunde zu kontaktieren.
-finished.yourid=Du kannst ihnen deinen Murmeli-Id geben: <big><code>%s</code></big>.
+finished.yourid=Du kannst ihnen deinen Murmeli-Id geben:
 
 [mainwindow]
 title=Murmeli
