Edit own contact details

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -108,6 +108,9 @@ details.owndescription=Wer bist du?
 details.description=Beschreibung
 details.interests=Interessen
 details.birthday=Geburtstag
+details.userid=Benutzerid
+details.editlink.before=Diese Details
+details.editlink.after=
 link.addnewcontact=Kontakt hinzufügen
 link.showstorm=Netzwerk skizzieren
 storm.title=Murmeli Netzwerk
