--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -110,6 +110,9 @@ details.owndescription=Describe yourself
 details.description=Description
 details.interests=Interests
 details.birthday=Birthday
+details.userid=User id
+details.editlink.before=
+details.editlink.after=these details
 link.addnewcontact=Add new contact
 link.showstorm=Draw network
 storm.title=Murmeli Network
