Beginnings of function to add robot

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -109,9 +109,12 @@ details.description=Beschreibung
 details.interests=Interessen
 details.birthday=Geburtstag
 details.userid=Benutzerid
+details.robotid=Roboter
+details.robotid.none=Keinen gesetzt
 details.editlink.before=Diese Details
 details.editlink.after=
 link.addnewcontact=Kontakt hinzufügen
+link.addrobot=Roboter setzen
 link.showstorm=Netzwerk skizzieren
 storm.title=Murmeli Netzwerk
 confirmdelete=Willst du sicher diesen Kontakt löschen?  Ihr werdet nicht mehr miteinander kommunizieren, ohne die Verbindung neu aufzubauen.
