--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -111,9 +111,12 @@ details.description=Description
 details.interests=Interests
 details.birthday=Birthday
 details.userid=User id
+details.robotid=Robot
+details.robotid.none=None set
 details.editlink.before=
 details.editlink.after=these details
 link.addnewcontact=Add new contact
+link.addrobot=Add robot
 link.showstorm=Draw network
 storm.title=Murmeli Network
 confirmdelete=Are you sure you want to delete this contact?  You won't be able to contact each other again without reconnecting.
