Validation of entered robot id

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -97,7 +97,7 @@ online=online
 onlinesince=seit %s online
 offlinesince=seit %s abwesend
 adduser.intro=Gib bitte die Id des Benutzers ein, und eine Nachricht um dich vorzustellen.
-adduser.checkuserid=Die Benutzerid sollte 16 Character lang und alphanumerisch sein.
+adduser.checkuserid=Die Benutzerid sollte lang und alphanumerisch sein.
 adduser.notownuserid=Die Benutzerid sollte nicht identisch sein wie deiner.
 adduser.useridfield=Benutzerid (die lange Id)
 adduser.displaynamefield=Name der angezeigt wird
