Show robot status on details page

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -112,8 +112,10 @@ details.description=Beschreibung
 details.interests=Interessen
 details.birthday=Geburtstag
 details.userid=Benutzerid
-details.robotid=Roboter
-details.robotid.none=Keinen gesetzt
+details.robotstatus=Roboter
+details.robotstatus.none=Keinen gesetzt
+details.robotstatus.requested=Angefordert
+details.robotstatus.enabled=Aktiviert
 details.editlink.before=Diese Details
 details.editlink.after=
 link.addnewcontact=Kontakt hinzufügen
