--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -114,8 +114,10 @@ details.description=Description
 details.interests=Interests
 details.birthday=Birthday
 details.userid=User id
-details.robotid=Robot
-details.robotid.none=None set
+details.robotstatus=Robot
+details.robotstatus.none=None set
+details.robotstatus.requested=Requested
+details.robotstatus.enabled=Enabled
 details.editlink.before=
 details.editlink.after=these details
 link.addnewcontact=Add new contact
