Use Contacts component to display robot online status

--- a/lang/murmeli-texts-de.txt
+++ b/lang/murmeli-texts-de.txt
@@ -116,6 +116,8 @@ details.robotstatus=Roboter
 details.robotstatus.none=Keinen gesetzt
 details.robotstatus.requested=Angefordert
 details.robotstatus.enabled=Aktiviert
+details.robotstatus.enabled.online=Aktiviert, online
+details.robotstatus.enabled.offline=Aktiviert, offline
 details.editlink.before=Diese Details
 details.editlink.after=
 link.addnewcontact=Kontakt hinzufügen
