--- a/lang/murmeli-texts-en.txt
+++ b/lang/murmeli-texts-en.txt
@@ -118,6 +118,8 @@ details.robotstatus=Robot
 details.robotstatus.none=None set
 details.robotstatus.requested=Requested
 details.robotstatus.enabled=Enabled
+details.robotstatus.enabled.online=Enabled, online
+details.robotstatus.enabled.offline=Enabled, offline
 details.editlink.before=
 details.editlink.after=these details
 link.addnewcontact=Add new contact
